[package]
authors = ["fitzypop <fitzypop@pm.me>"]
categories = ["web app", "leptos", "wasm"]
description = "My Leptos Playground"
edition = "2021"
license = "Unlicense"
name = "leptos_exp"
readme = "./README.md"
repository = "https://github.com/fitzypop/leptos_exp"
version = "0.1.0"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
